--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
-# Compiled class file
-*.class
+*.java.hsp
+*.sonarj
+*.sw*
+.DS_Store
+.settings
+bin
+build.sh
+integration-repo
+ivy-cache
+jxl.log
+jmx.log
+derby.log
+.gradle
+argfile*
 
-# Log file
-*.log
+classes/
+/build
+buildSrc/build
+target/
 
-# BlueJ files
-*.ctxt
+# Eclipse artifacts, including WTP generated manifests
+.classpath
+.project
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# IDEA artifacts and output dirs
+*.iml
+*.ipr
+*.iws
+.idea
+out
+test-output
+atlassian-ide-plugin.xml
+.gradletasknamecache
