--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 	/* log4j2 异步日志所需 */
 	implementation "com.lmax:disruptor:3.4.2"
 
+	// http client 文件上传
+	implementation 'org.apache.httpcomponents:httpmime:4.5.13'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 
 	implementation fileTree(dir: 'lib', includes: ["*.jar"])
@@ -92,6 +94,7 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
