--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
 	/* spring-boot-starter-data-redis 依赖 commons-pool2 连接池 */
 	implementation 'org.apache.commons:commons-pool2:2.8.1'
+	implementation 'redis.clients:jedis:2.9.1'
 	/* redis 分布式锁 */
 	implementation 'org.redisson:redisson:3.13.4'
 
