--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,9 @@ dependencies {
 	// netty
 	implementation 'io.netty:netty-all:4.1.58.Final'
 
+	implementation 'com.esotericsoftware:kryo:5.0.3'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
 	implementation fileTree(dir: 'lib', includes: ["*.jar"])
 
 	// other tools
